deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8ssecframework-deployment
  labels:
    app: k8ssecframework
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8ssecframework
  template:
    metadata:
      labels:
        app: k8ssecframework
    spec:
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
      containers:
      - name: k8ssecframework
        image: x23173394k8scontainerregistry.azurecr.io/kubernetes-security-framework:20241207023643-24e5c4b852a8a9ddd4e3bbbe3590e52c9da8be0c
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /hello
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /hello
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 15
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        securityContext:
          runAsUser: 1000
          runAsGroup: 3000
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      imagePullSecrets:
      - name: acr-secret
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        effect: NoSchedule
      - key: "CriticalAddonsOnly"
        operator: "Exists"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
