service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8ssecframework-service
spec:
  selector:
    app: k8ssecframework
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
  type: LoadBalancer
